--- a/pkg/webui/components/dedicated-entity/dedicated-entity.styl
+++ b/pkg/webui/components/dedicated-entity/dedicated-entity.styl
@@ -17,7 +17,7 @@
   align-items: center
 
 .label
-  font-size: $fs.s
+  font-size: $fs.m
   font-weight: $fw.normal
   margin: 0 0 0 $cs.xs
 
